update-manager (0.42.1ubuntu1) dapper; urgency=low

  * improved the HIG complicane more, removed some of the uglines
    from the last version

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 17 Jan 2006 17:27:15 +0100

update-manager (0.42ubuntu1) dapper; urgency=low

  * improved the HIG comlicane, thanks to Sebastian Heinlein:
    - Rename the button "close" to "cancel"
    - Move status bar to a separate dialog
    - Wording
    - Add a wider border around the changelog and
      description
     - Align and capitalize the button "Cancel downloading"
    (ubuntu: #28453)
  * bugfixes in the cache locking
  
 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 16 Jan 2006 12:56:29 +0100

update-manager (0.40.2) dapper; urgency=low

  * SoftwareProperties/SoftwareProperties.py:
    - fix a problem with transient/parent window in custom apt line
      dialog (ubuntu #21585)
    - fix a problem in the conf file writer that can lead to absurdly
      large files

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu,  5 Jan 2006 12:37:33 +0100

update-manager (0.40.1) dapper; urgency=low

  * SoftwareProperties/SoftwareProperties.py:
    - make it embedded friendlier

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 16 Dec 2005 14:02:27 +0100

update-manager (0.40) dapper; urgency=low

  * new upstream release:
    - switched from autotools to distutils
    - massive code cleanups 
    - use SimpleGladeApp now
    - SoftwareProperties has a new GUI
    - UpdateManager has support for upgrading from one dist to another
      now (given that the required "recipe" for the upgrade is available)
      See https://wiki.ubuntu.com/AutomaticUpgrade for details
    - use python-apt for "reload" and "add cdrom" now
    - improved the handling of sources.list a lot (including support for
      /etc/apt/sources.list.d)
  * support for the AutomaticUpgrades spec added via the meta-release 
    information
  * data/update-manager.desktop.in: 